--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,7 @@
-runtime: python
-env: flex
-entrypoint: gunicorn -b :$PORT main:app
+runtime: python27
+api_version: 1
+threadsafe: true
 
-runtime_config:
-  python_version: 3
+handlers:
+- url: /.*
+  script: main.app
