--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+click==6.7
 dj-database-url==0.4.1
 Django==1.9.7
+Flask==0.12.2
 gunicorn==19.6.0
+itsdangerous==0.24
+Jinja2==2.9.6
+MarkupSafe==1.0
 psycopg2==2.6.2
+Werkzeug==0.12.2
 whitenoise==2.0.6
